--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,8 +1,23 @@
-log4j.rootLogger=INFO, A1
+# set INFO as minimum level (INFO, WARN, ERROR, FATAL)
+log4j.rootLogger=INFO, stdout, stderr
 
-# A1 is set to be a ConsoleAppender.
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
+# configure stdout
+# set the conversion pattern of stdout
+# print TRACE, DEBUG and INFO via System.out
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %c - %m%n
+log4j.appender.stdout.filter.filter1 = org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stdout.filter.filter1.levelMin = TRACE
+log4j.appender.stdout.filter.filter1.levelMax = INFO
 
-# A1 uses PatternLayout.
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=[%-5p] %c - %m%n
+# configure stderr
+# set the conversion pattern of stdout
+# print WARN, ERROR and FATAL via System.err
+log4j.appender.stderr =org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.Target=System.err
+log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern=[%-5p] %c - %m%n
+log4j.appender.stderr.filter.filter1 = org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.stderr.filter.filter1.levelMin = WARN
