--- a/src/main/resources/design.yaml
+++ b/src/main/resources/design.yaml
@@ -24,6 +24,6 @@ background_color: "#82BB0F"
 button_font:
    file: "breathe_fire.otf"
    size: 32
-button_color: "#000000"  
-button_hight: 70
+button_text_color: "#000000"  
+button_height: 70
    
