--- a/src/main/resources/ClientProperties.yaml
+++ b/src/main/resources/ClientProperties.yaml
@@ -1,5 +1,7 @@
 title: Crushing Rocks!
-version: "1.2.4"
+version: "1.3.0"
+
+main_state: de.acagamics.crushingrocks.states.MainMenuState
 
 screen_width: 1280
 screen_height: 720
