Removing Players from map but registrating all units in map, adding Speedup after fight

--- a/src/main/resources/GameProperties.yaml
+++ b/src/main/resources/GameProperties.yaml
@@ -3,10 +3,13 @@ baseHP: 20
 baseRadius: 0.2
 unitRadius: 0.1
 maxUnitSpeed: 0.01
+speedUp: 0.002
 costExponent: 0.6
 constMultipier: 1000
 numberOfMines: 7
 maxUnitsPerPlayer: 8
+maxUnitStrength: 3
+heroStrength: 10
 perMineIncome: 10
 mineCapturingPerFrame: 0.005
 mineRadius: 0.15
