--- a/src/main/resources/GameProperties.yaml
+++ b/src/main/resources/GameProperties.yaml
@@ -1,5 +1,6 @@
 matchFrameQuantity: 5000
 baseHP: 20
+baseAttack: 1
 baseRadius: 0.2
 unitRadius: 0.1
 maxUnitSpeed: 0.01
@@ -12,6 +13,7 @@ maxUnitStrength: 3
 heroStrength: 10
 perMineIncome: 10
 mineCapturingPerFrame: 0.005
+mineRecapturingMultiplier: 2
 mineRadius: 0.15
 initialResources: 2500
 mapRadius: 1
